<?xml version="1.0"?>
<package format="2">
  <name>maxon_epos</name>
  <version>0.0.0</version>
  <description>The maxon_epos package</description>

  <maintainer email="f.n.heravi@gmail.com">Farshad Nozad Heravi</maintainer>
  <license>MIT</license>
  <author email="f.n.heravi@gmail.com">Farshad Nozad Heravi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
